[gd_scene load_steps=2 format=3 uid="uid://cvfur4ra58e75"]

[ext_resource type="Script" path="res://World/Enemies/AttachedStates/EnemyPoisonState.gd" id="1_a3o1v"]

[node name="EnemyPoisonState" type="Node2D"]
script = ExtResource("1_a3o1v")

[node name="PoisonParticles" type="Node2D" parent="."]

[node name="Parts3" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0, 0.332031, 0, 1)

[node name="Parts2" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0.145098, 0.545098, 0.145098, 1)

[node name="Parts1" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color(1.35, 1.35, 1.35, 1)
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
color = Color(0.14902, 0.937255, 0.14902, 1)

[node name="PoisonedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PoisonedTimer" to="." method="_on_PoisonedTimer_timeout"]
